--- a/index.html
+++ b/index.html
@@ -181,12 +181,19 @@
             url: "https://conectperu.com/8324/stream",
           },
         },
-        {
-          startTime: "17:00:00",
-          endTime: "17:56:00",
+         {
+          startTime: "20:35:03",
+          endTime: "20:56:00",
           station: {
-            name: "Radio Vida",
-            url: "https://radio.transmite.pe/9318/stream",
+            name: "Radio Nueva Luz",
+            url: "https://conectperu.com/8324/stream",
+          },
+        {
+          startTime: "20:30:00",
+          endTime: "20:35:00",
+          station: {
+            name: "Radio mas Vida",
+            url: "https://masvida.radionline.com.es/listen/m%C3%A1s_vida_rock_and_pop/radio.mp3",
           },
         },
       ];
