--- a/index.html
+++ b/index.html
@@ -181,16 +181,26 @@
             url: "https://conectperu.com/8324/stream",
           },
         },
-         {
-          startTime: "20:35:03",
-          endTime: "20:56:00",
+        {
+          startTime: "17:00:00",
+          endTime: "17:56:00",
           station: {
-            name: "Radio Nueva Luz",
+            name: "Radio Vida",
             url: "https://conectperu.com/8324/stream",
           },
+        },
         {
-          startTime: "20:30:00",
-          endTime: "20:35:00",
+          startTime: "20:40:00",
+          endTime: "20:45:00",
+          station: {
+            name: "Radio Nueva luz",
+            url: "https://conectperu.com/8324/stream",
+          },
+        },
+        
+        {
+          startTime: "20:45:03",
+          endTime: "20:50:00",
           station: {
             name: "Radio mas Vida",
             url: "https://masvida.radionline.com.es/listen/m%C3%A1s_vida_rock_and_pop/radio.mp3",
