--- a/index.html
+++ b/index.html
@@ -127,10 +127,18 @@
         },
         {
           startTime: "07:00:03",
-          endTime: "08:56:00",
+          endTime: "07:10:00",
           station: {
             name: "Radio Vida",
             url: "https://radio.transmite.pe/9318/stream",
+          },
+        },
+        {
+          startTime: "07:10:03",
+          endTime: "07:56:00",
+          station: {
+            name: "Radio Union Cristiana",
+            url: "https://stream-159.zeno.fm/6u0yyg3fwqruv?zt=eyJhbGciOiJIUzI1NiJ9.eyJzdHJlYW0iOiI2dTB5eWczZndxcnV2IiwiaG9zdCI6InN0cmVhbS0xNTkuemVuby5mbSIsInJ0dGwiOjUsImp0aSI6IlVDMEJ2U3hRVDdtWFJrWFIxRWNYMnciLCJpYXQiOjE3NDU0MTU1NTQsImV4cCI6MTc0NTQxNTYxNH0.7VFx0sGr6IHh5R2HQm_7nAGNyqoiLLe0IZdbYFgO4WA",
           },
         },
         {
@@ -143,39 +151,7 @@
         },
         {
           startTime: "08:00:03",
-          endTime: "09:56:00",
-          station: {
-            name: "Radio Nueva Luz",
-            url: "https://conectperu.com/8324/stream",
-          },
-        },
-        {
-          startTime: "08:56:03",
-          endTime: "09:00:00",
-          station: {
-            name: "Radio Radio La uncion",
-            url: "https://jml-stream.com:8010/app.aac",
-          },
-        },
-        {
-          startTime: "09:00:03",
-          endTime: "10:56:00",
-          station: {
-            name: "Radio Nueva Luz",
-            url: "https://conectperu.com/8324/stream",
-          },
-        },
-        {
-          startTime: "10:56:03",
-          endTime: "11:00:00",
-          station: {
-            name: "Radio Radio La uncion",
-            url: "https://jml-stream.com:8010/app.aac",
-          },
-        },
-        {
-          startTime: "11:00:03",
-          endTime: "11:56:00",
+          endTime: "12:00:00",
           station: {
             name: "Radio Nueva Luz",
             url: "https://conectperu.com/8324/stream",
@@ -187,6 +163,14 @@
           station: {
             name: "Radio Vida",
             url: "https://conectperu.com/8324/stream",
+          },
+        },
+       {
+          startTime: "18:00:00",
+          endTime: "18:56:00",
+          station: {
+            name: "Radio Bethel",
+            url: "https://alfa.betheltv.tv/radiobethel/1/icecast.audio",
           },
         },
       ];
@@ -201,6 +185,14 @@
         {
           name: "Radio Bethel",
           url: "https://alfa.betheltv.tv/radiobethel/1/icecast.audio",
+        },
+         {
+          name: "Radio Unión Cristiana",
+          url: "https://stream-159.zeno.fm/6u0yyg3fwqruv?zt=eyJhbGciOiJIUzI1NiJ9.eyJzdHJlYW0iOiI2dTB5eWczZndxcnV2IiwiaG9zdCI6InN0cmVhbS0xNTkuemVuby5mbSIsInJ0dGwiOjUsImp0aSI6IlVDMEJ2U3hRVDdtWFJrWFIxRWNYMnciLCJpYXQiOjE3NDU0MTU1NTQsImV4cCI6MTc0NTQxNTYxNH0.7VFx0sGr6IHh5R2HQm_7nAGNyqoiLLe0IZdbYFgO4WA",
+        },
+         {
+          name: "Radio La Unción",
+          url: "https://jml-stream.com:8010/app.aac",
         },
       ];
 
