--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
       <h2>Estaciones Disponibles</h2>
       <ul id="stationList"></ul>
       <button id="scrollToTopButton">Volver arriba</button>
+      <div id="footerText">
+        <p>
+          Al usar este servicio, aceptas los 
+          <a href="terminos.html" target="_blank">términos y condiciones</a>.
+        </p>
+      </div>
     </div>
     <script src="script.js"></script>
     <script>
