--- a/terminos.html
+++ b/terminos.html
@@ -41,17 +41,13 @@
       este sitio:
     </p>
     <ul>
-      <li>Radio Mas Vida</li>
       <li>Radio Vida Cusco</li>
       <li>Radio Nueva Luz Cusco</li>
       <li>Radio La Unción</li>
       <li>Radio Unión Cristiana</li>
       <li>Radio Bethel</li>
       <li>Radio Diospysuyana</li>
-      <li>
-        Y otras radios cristianas adicionales que transmiten de manera pública
-        por internet.
-      </li>
+      <li>Radio Al Fin </li>
     </ul>
     <p>
       Se reconoce que los derechos de transmisión, producción y autoría de los
