--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <div id="modeIndicator">Modo: Automático</div>
       <h2>Estaciones Disponibles</h2>
       <ul id="stationList"></ul>
+      <button id="scrollToTopButton">Volver arriba</button>
       <div id="footerText">
         <p>
           Al usar este servicio, aceptas los 
