--- a/terminos.html
+++ b/terminos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Términos y nada</title>
+    <title>Términos y Condiciones</title>
   </head>
   <body>
     <h1>Términos y Condiciones de Uso</h1>
