--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <div id="preloader" style="position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.85);display:flex;flex-direction:column;align-items:center;justify-content:center;z-index:9999;">
+    <div id="preloader">
       <img src="https://img.icons8.com/ios-filled/100/ffffff/loading.png" alt="Cargando..." id="preloaderSpinner" style="width:60px;height:60px;">
       <div id="preloaderMsg" style="color:#fff;margin-top:20px;font-size:1.2rem;">Cargando radio...</div>
       <button id="preloaderStart" style="display:none;margin-top:30px;padding:12px 32px;font-size:1rem;border:none;border-radius:8px;background:#fff;color:#222;cursor:pointer;">Iniciar</button>
