--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <div id="preloader">
-      <img src="https://img.icons8.com/ios-filled/100/ffffff/loading.png" alt="Cargando..." id="preloaderSpinner" style="width:60px;height:60px;">
-      <div id="preloaderMsg" style="color:#fff;margin-top:20px;font-size:1.2rem;">Cargando radio...</div>
-      <button id="preloaderStart" style="display:none;margin-top:30px;padding:12px 32px;font-size:1rem;border:none;border-radius:8px;background:#fff;color:#222;cursor:pointer;">Iniciar</button>
+      <img src="https://img.icons8.com/ios-filled/100/ffffff/loading.png" alt="Cargando..." id="preloaderSpinner">
+      <div id="preloaderMsg">Cargando radio...</div>
+      <button id="preloaderStart">Iniciar</button>
     </div>
     <div class="container">
       <h1 id="programTitle"></h1>
