--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="shuffleButton">
           <img
             src="https://img.icons8.com/?size=100&id=9986&format=png&color=000000"
-            alt="Seleccionar emisora aleatoria"
+            alt="Alertorio"
             id="shuffleIcon"
           />
         </div>
@@ -48,7 +48,6 @@
         <div id="nextEventDetails"></div>
       </div>
       <audio id="radioPlayer"></audio>
-      <audio id="transitionAudio" src="assets/High Technology.mp3"></audio>
       <div id="scheduleContainer">
         <h2 id="scheduleTitle">En Curso</h2>
         <ul id="programList"></ul>
