--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     />
   </head>
   <body>
-    <div id="preloader">
-      <img src="https://img.icons8.com/ios-filled/100/ffffff/loading.png" alt="Cargando..." id="preloaderSpinner">
-      <div id="preloaderMsg">Cargando radio...</div>
-      <button id="preloaderStart">Iniciar</button>
+    <div id="preloader" style="position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.85);display:flex;flex-direction:column;align-items:center;justify-content:center;z-index:9999;">
+      <img src="https://img.icons8.com/ios-filled/100/ffffff/loading.png" alt="Cargando..." id="preloaderSpinner" style="width:60px;height:60px;">
+      <div id="preloaderMsg" style="color:#fff;margin-top:20px;font-size:1.2rem;">Cargando radio...</div>
+      <button id="preloaderStart" style="display:none;margin-top:30px;padding:12px 32px;font-size:1rem;border:none;border-radius:8px;background:#fff;color:#222;cursor:pointer;">Iniciar</button>
     </div>
     <div class="container">
       <h1 id="programTitle"></h1>
@@ -38,7 +38,7 @@
         <div id="shuffleButton">
           <img
             src="https://img.icons8.com/?size=100&id=9986&format=png&color=000000"
-            alt="Alertorio"
+            alt="Seleccionar emisora aleatoria"
             id="shuffleIcon"
           />
         </div>
@@ -48,6 +48,7 @@
         <div id="nextEventDetails"></div>
       </div>
       <audio id="radioPlayer"></audio>
+      <audio id="transitionAudio" src="assets/High Technology.mp3"></audio>
       <div id="scheduleContainer">
         <h2 id="scheduleTitle">En Curso</h2>
         <ul id="programList"></ul>
@@ -65,5 +66,14 @@
       </div>
     </div>
     <script src="script.js"></script>
+    <script>
+      document.getElementById("currentDayIndicator").addEventListener("click", () => {
+        const scheduleContainer = document.getElementById("scheduleContainer");
+        scheduleContainer.scrollIntoView({
+          behavior: "smooth", // Desplazamiento suave
+          block: "start", // Alinear al inicio del contenedor
+        });
+      });
+    </script>
   </body>
 </html>
