--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Radio Online V1.0</title>
+    <title>Radio Online v1.1</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="shortcut icon"
